tests/ui/attr_expected_assignment.stderr
error: fixed-derive error: Expected assignment ('=' character).
 --> tests/ui/attr_expected_assignment.rs:5:30
  |
5 |     #[fixed(width = 5, align "right")]
  |                              ^^^^^^^
