tests/ui/attr_expected_assignment.rs
use fixed_derive::ReadFixed;

#[derive(ReadFixed)]
struct Thing {
    #[fixed(width = 5, align "right")]
    field: String,
}

pub fn main() {}
